--- a/index.html
+++ b/index.html
@@ -2,144 +2,221 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>FreeFlow Voice</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FreeFlow — Voice to order</title>
+  <meta name="theme-color" content="#0f1218" />
+
   <style>
-    body { font-family: system-ui, sans-serif; background:#111; color:#fff; text-align:center; margin:0; padding:32px; }
-    #micBtn { width:120px; height:120px; border-radius:50%; background:#222; border:none; cursor:pointer; margin:20px auto; display:block; font-size:48px; }
-    #micBtn.pulse { animation:pulse 1.5s infinite; }
-    @keyframes pulse {
-      0% { box-shadow:0 0 0 0 rgba(0,255,0,.7); }
-      70% { box-shadow:0 0 0 15px rgba(0,255,0,0); }
-      100% { box-shadow:0 0 0 0 rgba(0,255,0,0); }
+    :root{
+      --bg:#0f1218;
+      --panel:#121721;
+      --text:#e9edf5;
+      --muted:#9aa3b2;
+      --brand:#ff7a19;   /* pomarańcz */
+      --brand-dim:#c95f12;
+      --ring:#ff7a19aa;
     }
-    #statusDot { width:10px; height:10px; border-radius:50%; background:#2ecc71; display:inline-block; margin-right:8px; vertical-align:middle; }
-    #transcript { margin-top:12px; min-height:30px; font-size:1.1rem; opacity:.95; }
+    *{ box-sizing:border-box }
+    html,body{ height:100% }
+    body{
+      margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Arial;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at 50% -200px, #26314266, transparent 60%),
+        radial-gradient(800px 400px at 20% 0, #1b223055, transparent 60%),
+        var(--bg);
+    }
+
+    .wrap{ max-width:980px; margin:0 auto; padding:24px 20px 56px }
+    header{ display:flex; align-items:center; gap:12px; margin-bottom:18px }
+    .logo{ font-size:36px; font-weight:800; letter-spacing:.3px }
+    .logo .free{ color:var(--brand) }
+    .logo .flow{ color:#fff }
+    .subtitle{ color:var(--muted); font-weight:600; margin-left:6px }
+
+    h1{
+      font-size:48px; line-height:1.05; margin:18px 0 10px; letter-spacing:.2px;
+    }
+    .tagline{ color:var(--muted); margin-bottom:16px; font-size:18px }
+
+    /* HERO */
+    .hero{
+      position:relative; display:grid; place-items:center;
+      width:min(680px, 92vw); aspect-ratio:1/1;
+      margin:18px auto 18px;
+      border-radius:50%;
+      background: radial-gradient(60% 60% at 50% 45%, #1a2230 0%, #0f141c 65%, #0b0f15 100%);
+      box-shadow:
+        0 0 0 2px #2a3140 inset,
+        0 0 80px 10px #000 inset,
+        0 0 0 1px #000,
+        0 20px 60px #000;
+      overflow:hidden;
+    }
+    .hero::before{
+      content:""; position:absolute; inset:10px; border-radius:50%;
+      background:
+        conic-gradient(from 0deg, #ff7a19 0 14%, #ffb36a 14% 16%, transparent 16% 18%, #6ad4ff 18% 32%, transparent 32% 34%, #b36aff 34% 48%, transparent 48% 50%, #ff7a19 50% 64%, transparent 64% 66%, #ffb36a 66% 82%, transparent 82% 84%, #6ad4ff 84% 100%);
+      filter: blur(28px) saturate(120%);
+      opacity:.18; pointer-events:none;
+    }
+    .hero img{
+      width:78%; max-width:520px; filter: drop-shadow(0 12px 28px #000) saturate(110%);
+      transform: translateY(-4px);
+      user-select:none; -webkit-user-drag:none;
+    }
+
+    /* guzik mic */
+    .cta{
+      position:absolute; bottom:26px; left:50%; transform:translateX(-50%);
+      background:linear-gradient(#191f2a, #151a23);
+      border:1px solid #2a3242; color:#dbe2ee;
+      padding:16px 22px; border-radius:18px; font-size:18px;
+      display:flex; align-items:center; gap:10px;
+      box-shadow:
+        0 4px 14px rgba(0,0,0,.6),
+        0 0 0 0 var(--ring);
+      transition: .2s ease;
+      cursor:pointer;
+    }
+    .cta:active{ transform:translateX(-50%) translateY(1px) }
+    .cta.pulse{ animation:pulse 1.6s infinite }
+    @keyframes pulse{
+      0%{ box-shadow:0 0 0 0 var(--ring) }
+      70%{ box-shadow:0 0 0 16px transparent }
+      100%{ box-shadow:0 0 0 0 transparent }
+    }
+
+    /* transcript */
+    .bubble{
+      max-width:820px; margin:16px auto 6px;
+      background:linear-gradient(180deg, #151a24, #11161f);
+      border:1px solid #283142; border-radius:18px;
+      padding:16px 18px; font-size:18px; color:#e6ecf7;
+      display:flex; align-items:center; gap:10px;
+      box-shadow: 0 8px 24px rgba(0,0,0,.55);
+    }
+    .dot{ width:10px; height:10px; border-radius:50%; background:#2ecc71; box-shadow:0 0 0 3px #2ecc7133 }
+    .actions{ display:flex; gap:14px; justify-content:center; margin-top:18px }
+    .chip{
+      padding:14px 18px; border-radius:16px;
+      background:linear-gradient(#191f2a, #151a23);
+      border:1px solid #2a3242; color:#dbe2ee; font-weight:600;
+      box-shadow:0 6px 18px rgba(0,0,0,.55);
+    }
+    .chip--brand{
+      color:var(--brand); border-color:#3a1f10; background:linear-gradient(#1b120c, #140e09);
+      box-shadow: 0 0 0 1px #3a1f10 inset, 0 10px 22px rgba(0,0,0,.6), 0 0 24px #ff7a191f;
+    }
+
+    @media (max-width:540px){
+      h1{ font-size:36px }
+      .cta{ font-size:16px; padding:14px 18px }
+      .bubble{ font-size:16px }
+    }
   </style>
 </head>
 <body>
+  <div class="wrap">
+    <header>
+      <div class="logo">
+        <span class="free">Free</span><span class="flow">Flow</span>
+      </div>
+      <div class="subtitle">Voice to<br>order</div>
+    </header>
 
-  <h1>🎤 FreeFlow Voice Assistant</h1>
+    <h1>Złóż zamówienie</h1>
+    <div class="tagline">Taxi, posiłek, a może nocleg?</div>
 
-  <!-- ma mieć ID 'micBtn' (ułatwia podpięcie) -->
-  <button id="micBtn" aria-label="Mów">🎤</button>
+    <section class="hero">
+      <!-- UWAGA: nazwa pliku jest czuła na wielkość liter -->
+      <img src="./Freeflow-logo.png" alt="FreeFlow logo" />
+      <button id="micBtn" class="cta" aria-label="Mów">
+        <span>🎤</span> <span>Dotknij logo i mów…</span>
+      </button>
+    </section>
 
-  <div>
-    <span id="statusDot"></span>
-    <span id="transcript">Dotknij, aby mówić…</span>
+    <div class="bubble">
+      <span id="stateDot" class="dot" aria-hidden="true"></span>
+      <div id="transcript">Transkrypcja pojawi się tutaj…</div>
+    </div>
+
+    <div class="actions">
+      <div class="chip chip--brand">🍽️ Jedzenie</div>
+      <div class="chip">🚕 Taxi</div>
+      <div class="chip">🏨 Hotel</div>
+    </div>
   </div>
 
-  <!-- Player do base64 MP3 (musi być PRZED zamknięciem body) -->
   <audio id="ttsPlayer" preload="auto"></audio>
 
   <script>
-  // === KONFIG ===
-  const API_URL = 'https://freeflow-backend-vercel.vercel.app/api/assistant-text';
+    const API_URL = 'https://freeflow-backend-vercel.vercel.app/api/assistant-text';
 
-  // elementy UI
-  const micBtn = document.getElementById('micBtn');
-  const transcriptBox = document.getElementById('transcript');
-  const statusDot = document.getElementById('statusDot');
-  const player = document.getElementById('ttsPlayer');
+    const micBtn = document.getElementById('micBtn');
+    const transcriptBox = document.getElementById('transcript');
+    const stateDot = document.getElementById('stateDot');
+    const player = document.getElementById('ttsPlayer');
 
-  // status UI
-  function setState(s){
-    const colors = { idle:'#2ecc71', listen:'#f1c40f', think:'#3498db', err:'#e74c3c' };
-    statusDot.style.background = colors[s] || colors.idle;
-    micBtn.classList.toggle('pulse', s==='listen');
-    micBtn.dataset.state = s;
-  }
-  function showText(t){ transcriptBox.textContent = t; }
-
-  // TTS
-  async function playBase64Mp3(base64){
-    try{
-      player.src = `data:audio/mpeg;base64,${base64}`;
-      await player.play();
-      return true;
-    }catch(e){
-      console.warn('Audio play error', e);
-      return false;
+    function setState(s){
+      const map = { idle:'#2ecc71', listen:'#f1c40f', think:'#3498db', err:'#e74c3c' };
+      stateDot.style.background = map[s] || map.idle;
+      micBtn.classList.toggle('pulse', s==='listen');
     }
-  }
-  function speakFallback(text, lang='pl-PL'){
-    try{
-      const u = new SpeechSynthesisUtterance(text);
-      u.lang = lang;
-      speechSynthesis.cancel();
-      speechSynthesis.speak(u);
-    }catch(e){ console.warn('speechSynthesis failed', e); }
-  }
+    function show(t){ transcriptBox.textContent = t }
 
-  // Backend call
-  async function sendToAssistant(userText){
-    try{
-      setState('think');
-      const res = await fetch(API_URL, {
-        method:'POST',
-        headers:{ 'Content-Type':'application/json' },
-        body: JSON.stringify({ text: userText })
-      });
-      const data = await res.json();
-
-      if(!data.success){
-        setState('err'); showText('Błąd serwera'); speakFallback('Wystąpił błąd po stronie serwera.');
-        return;
-      }
-
-      const answer = data.assistantText || 'Hmmm…';
-      showText(answer);
-
-      if (data.audioBase64){
-        const ok = await playBase64Mp3(data.audioBase64);
-        if(!ok) speakFallback(answer);
-      } else {
-        speakFallback(answer);
-      }
-      setState('idle');
-    }catch(err){
-      console.error(err);
-      setState('err'); showText('Problem z połączeniem'); speakFallback('Nie udało się połączyć z serwerem.');
+    async function playBase64Mp3(b64){
+      try{ player.src = `data:audio/mpeg;base64,${b64}`; await player.play(); return true; }
+      catch(e){ return false; }
     }
-  }
+    function speakFallback(text){
+      try{ const u=new SpeechSynthesisUtterance(text); u.lang='pl-PL'; speechSynthesis.cancel(); speechSynthesis.speak(u); }catch{}
+    }
 
-  // ASR (Web Speech)
-  function startDictation(){
-    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if(!SR){ alert('Twoja przeglądarka nie wspiera rozpoznawania mowy. Spróbuj Chrome.'); return; }
+    async function sendToAssistant(text){
+      try{
+        setState('think');
+        const r = await fetch(API_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({text})});
+        const data = await r.json();
+        if(!data.success){ setState('err'); show('Błąd serwera'); speakFallback('Wystąpił błąd serwera.'); return; }
+        const answer = data.assistantText || 'OK';
+        show(answer);
+        if (data.audioBase64){
+          const ok = await playBase64Mp3(data.audioBase64);
+          if(!ok) speakFallback(answer);
+        } else { speakFallback(answer); }
+        setState('idle');
+      }catch(e){ setState('err'); show('Problem z połączeniem'); speakFallback('Nie udało się połączyć z serwerem.'); }
+    }
 
-    const rec = new SR();
-    rec.lang = 'pl-PL';
-    rec.interimResults = true;
-    rec.maxAlternatives = 1;
+    function startASR(){
+      const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+      if(!SR){ alert('Twoja przeglądarka nie wspiera rozpoznawania mowy (spróbuj Chrome)'); return; }
+      const rec = new SR();
+      rec.lang = 'pl-PL'; rec.interimResults = true; rec.maxAlternatives = 1;
+      rec.onstart = ()=>{ setState('listen'); show('Słucham…') };
+      rec.onerror = ()=>{ setState('err'); show('Błąd rozpoznawania') };
+      rec.onresult = (e)=>{
+        let final='', inter='';
+        for(let i=e.resultIndex;i<e.results.length;i++){
+          const t=e.results[i][0].transcript;
+          e.results[i].isFinal ? final+=t+' ' : inter+=t;
+        }
+        show((final||inter).trim());
+      };
+      rec.onend = ()=>{
+        const txt = transcriptBox.textContent.trim();
+        if (txt) sendToAssistant(txt); else setState('idle');
+      };
+      rec.start();
+    }
 
-    rec.onstart = ()=>{ setState('listen'); showText('Słucham…'); };
-    rec.onerror = e => { setState('err'); showText('Błąd rozpoznawania'); console.warn(e); };
-    rec.onresult = e => {
-      let final = '', interim = '';
-      for (let i=e.resultIndex;i<e.results.length;i++){
-        const t = e.results[i][0].transcript;
-        if (e.results[i].isFinal) final += t + ' ';
-        else interim += t;
-      }
-      showText((final || interim).trim());
-    };
-    rec.onend = ()=>{
-      const userText = transcriptBox.textContent.trim();
-      if (userText) sendToAssistant(userText);
-      else setState('idle');
-    };
+    micBtn.addEventListener('click', ()=>{
+      try{ speechSynthesis.cancel(); player.pause(); }catch{}
+      startASR();
+    });
 
-    rec.start();
-  }
-
-  // klik = gest dla autoplay
-  micBtn.addEventListener('click', ()=>{
-    try{ speechSynthesis.cancel(); player.pause(); }catch{}
-    startDictation();
-  });
-
-  setState('idle');
+    setState('idle');
   </script>
 </body>
 </html>
