--- a/index.html
+++ b/index.html
@@ -1,222 +1,244 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FreeFlow — Voice to order</title>
-  <meta name="theme-color" content="#0f1218" />
-
+  <title>FreeFlow – Voice to order</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0f1218;
-      --panel:#121721;
-      --text:#e9edf5;
-      --muted:#9aa3b2;
-      --brand:#ff7a19;   /* pomarańcz */
-      --brand-dim:#c95f12;
-      --ring:#ff7a19aa;
+      --bg1:#0f1115; --bg2:#0a0c10; --card:#141821; --muted:#9aa3af;
+      --fg:#e5e7eb; --accent:#ff7a18; --accent2:#ff4d00; --ring:#13d38e;
     }
-    *{ box-sizing:border-box }
-    html,body{ height:100% }
+    *{box-sizing:border-box}
+    html,body{height:100%}
     body{
-      margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Arial;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 600px at 50% -200px, #26314266, transparent 60%),
-        radial-gradient(800px 400px at 20% 0, #1b223055, transparent 60%),
-        var(--bg);
+      margin:0; font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      color:var(--fg);
+      background: radial-gradient(1200px 600px at 50% -200px, #1a2233 0%, var(--bg1) 45%, var(--bg2) 100%);
     }
-
-    .wrap{ max-width:980px; margin:0 auto; padding:24px 20px 56px }
-    header{ display:flex; align-items:center; gap:12px; margin-bottom:18px }
-    .logo{ font-size:36px; font-weight:800; letter-spacing:.3px }
-    .logo .free{ color:var(--brand) }
-    .logo .flow{ color:#fff }
-    .subtitle{ color:var(--muted); font-weight:600; margin-left:6px }
-
+    .wrap{max-width:1040px;margin:0 auto;padding:24px 16px 64px}
+    header{
+      display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:18px
+    }
+    .brand{display:flex;align-items:center;gap:10px}
+    .logo{
+      width:34px;height:34px;border-radius:10px;background:#1d2430 url('./Freeflow-logo.png') center/cover no-repeat;
+      box-shadow:0 0 0 2px #222 inset, 0 10px 30px rgba(0,0,0,.4);
+    }
+    .wordmark{font-weight:800;font-size:28px;letter-spacing:.2px}
+    .wordmark .free{color:var(--accent)}
+    .wordmark .flow{color:#fff;opacity:.95}
+    .top-actions{display:flex;gap:10px}
+    .icon-btn{
+      width:46px;height:46px;border-radius:14px;border:1px solid #232835;background:#121621;
+      display:grid;place-items:center;color:#cbd5e1;cursor:pointer;position:relative;
+      box-shadow:0 8px 30px rgba(0,0,0,.35);
+    }
+    .icon-btn:active{transform:translateY(1px)}
+    .badge{position:absolute;top:-6px;right:-6px;background:var(--accent);
+      color:#111;padding:3px 6px;border-radius:999px;font-size:12px;font-weight:700;box-shadow:0 2px 12px rgba(255,122,24,.5)}
     h1{
-      font-size:48px; line-height:1.05; margin:18px 0 10px; letter-spacing:.2px;
+      font-size:42px;line-height:1.05;margin:18px 0 6px;font-weight:800;letter-spacing:.2px
     }
-    .tagline{ color:var(--muted); margin-bottom:16px; font-size:18px }
-
-    /* HERO */
+    .subtitle{color:var(--muted);font-size:20px;margin-bottom:18px}
     .hero{
-      position:relative; display:grid; place-items:center;
-      width:min(680px, 92vw); aspect-ratio:1/1;
-      margin:18px auto 18px;
-      border-radius:50%;
-      background: radial-gradient(60% 60% at 50% 45%, #1a2230 0%, #0f141c 65%, #0b0f15 100%);
-      box-shadow:
-        0 0 0 2px #2a3140 inset,
-        0 0 80px 10px #000 inset,
-        0 0 0 1px #000,
-        0 20px 60px #000;
-      overflow:hidden;
+      margin:10px auto 18px;width:min(95%,820px);aspect-ratio:1/1;border-radius:999px;
+      background:radial-gradient(circle at 50% 45%, #1f2635 0%, #10131a 60%, #0b0e13 100%);
+      display:grid;place-items:center;position:relative;box-shadow:0 20px 80px rgba(0,0,0,.55), inset 0 0 0 1px #23283a;
     }
     .hero::before{
-      content:""; position:absolute; inset:10px; border-radius:50%;
-      background:
-        conic-gradient(from 0deg, #ff7a19 0 14%, #ffb36a 14% 16%, transparent 16% 18%, #6ad4ff 18% 32%, transparent 32% 34%, #b36aff 34% 48%, transparent 48% 50%, #ff7a19 50% 64%, transparent 64% 66%, #ffb36a 66% 82%, transparent 82% 84%, #6ad4ff 84% 100%);
-      filter: blur(28px) saturate(120%);
-      opacity:.18; pointer-events:none;
+      content:""; position:absolute; inset:22px; border-radius:999px;
+      background:radial-gradient(closest-side, rgba(255,122,24,.18), transparent 60%),
+                  radial-gradient(farthest-side, rgba(255,77,0,.18), transparent 70%);
+      filter:blur(6px);
     }
-    .hero img{
-      width:78%; max-width:520px; filter: drop-shadow(0 12px 28px #000) saturate(110%);
-      transform: translateY(-4px);
-      user-select:none; -webkit-user-drag:none;
+    .logo-mic{
+      width:min(78%,540px); aspect-ratio:1/1; border-radius:999px;
+      background: url('./Freeflow-logo.png') center/contain no-repeat;
+      filter: drop-shadow(0 18px 60px rgba(255,122,24,.25));
     }
-
-    /* guzik mic */
-    .cta{
-      position:absolute; bottom:26px; left:50%; transform:translateX(-50%);
-      background:linear-gradient(#191f2a, #151a23);
-      border:1px solid #2a3242; color:#dbe2ee;
-      padding:16px 22px; border-radius:18px; font-size:18px;
-      display:flex; align-items:center; gap:10px;
-      box-shadow:
-        0 4px 14px rgba(0,0,0,.6),
-        0 0 0 0 var(--ring);
-      transition: .2s ease;
-      cursor:pointer;
+    .speak-cta{
+      position:absolute;left:50%;bottom:32px;transform:translateX(-50%);
+      background: linear-gradient(180deg,#171b24,#121621); color:#e6edf7; border:1px solid #23283a;
+      border-radius:18px;padding:16px 22px;font-size:18px;box-shadow:0 10px 30px rgba(0,0,0,.45);
+      display:flex;align-items:center;gap:10px;cursor:pointer;
     }
-    .cta:active{ transform:translateX(-50%) translateY(1px) }
-    .cta.pulse{ animation:pulse 1.6s infinite }
+    .led{width:10px;height:10px;border-radius:50%;background:#3b3f46;box-shadow:0 0 0 2px #0a0c10 inset}
+    .led.on{background:var(--ring); box-shadow:0 0 10px 2px rgba(19,211,142,.55)}
+    .pill{
+      margin:12px auto 0;max-width:900px;background:#111520;border:1px solid #23283a;border-radius:18px;
+      padding:16px 18px;color:#cbd5e1; font-size:20px; min-height:28px; display:flex;align-items:center;gap:12px
+    }
+    .quick{
+      display:flex;flex-wrap:wrap;gap:18px;margin-top:18px
+    }
+    .quick button{
+      border:none;color:#e6edf7;background:linear-gradient(180deg,#171b24,#121621);
+      border:1px solid #23283a;border-radius:18px;padding:14px 18px;min-width:140px;font-size:18px;cursor:pointer;
+      box-shadow:0 8px 28px rgba(0,0,0,.35)
+    }
+    .quick button:active{transform:translateY(1px)}
+    /* mic button hit area */
+    #micBtn{position:absolute;inset:0;border:0;background:transparent;cursor:pointer}
+    /* pulse when listening */
+    .listening .speak-cta .led{animation:pulse 1.2s infinite}
     @keyframes pulse{
-      0%{ box-shadow:0 0 0 0 var(--ring) }
-      70%{ box-shadow:0 0 0 16px transparent }
-      100%{ box-shadow:0 0 0 0 transparent }
+      0%{box-shadow:0 0 0 0 rgba(19,211,142,.6)}
+      70%{box-shadow:0 0 0 16px rgba(19,211,142,0)}
+      100%{box-shadow:0 0 0 0 rgba(19,211,142,0)}
     }
-
-    /* transcript */
-    .bubble{
-      max-width:820px; margin:16px auto 6px;
-      background:linear-gradient(180deg, #151a24, #11161f);
-      border:1px solid #283142; border-radius:18px;
-      padding:16px 18px; font-size:18px; color:#e6ecf7;
-      display:flex; align-items:center; gap:10px;
-      box-shadow: 0 8px 24px rgba(0,0,0,.55);
-    }
-    .dot{ width:10px; height:10px; border-radius:50%; background:#2ecc71; box-shadow:0 0 0 3px #2ecc7133 }
-    .actions{ display:flex; gap:14px; justify-content:center; margin-top:18px }
-    .chip{
-      padding:14px 18px; border-radius:16px;
-      background:linear-gradient(#191f2a, #151a23);
-      border:1px solid #2a3242; color:#dbe2ee; font-weight:600;
-      box-shadow:0 6px 18px rgba(0,0,0,.55);
-    }
-    .chip--brand{
-      color:var(--brand); border-color:#3a1f10; background:linear-gradient(#1b120c, #140e09);
-      box-shadow: 0 0 0 1px #3a1f10 inset, 0 10px 22px rgba(0,0,0,.6), 0 0 24px #ff7a191f;
-    }
-
-    @media (max-width:540px){
-      h1{ font-size:36px }
-      .cta{ font-size:16px; padding:14px 18px }
-      .bubble{ font-size:16px }
+    @media (max-width:640px){
+      h1{font-size:34px}
+      .subtitle{font-size:18px}
     }
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
-      <div class="logo">
-        <span class="free">Free</span><span class="flow">Flow</span>
+      <div class="brand">
+        <div class="logo"></div>
+        <div class="wordmark"><span class="free">Free</span><span class="flow">Flow</span><div style="font-size:12px;color:#9aa3af;margin-top:-2px">Voice to order</div></div>
       </div>
-      <div class="subtitle">Voice to<br>order</div>
+      <div class="top-actions">
+        <button class="icon-btn" aria-label="Menu" id="btnMenu">
+          <!-- menu icon -->
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M3 6h18M3 12h18M3 18h18" stroke="#d1d5db" stroke-width="2" stroke-linecap="round"/></svg>
+        </button>
+        <button class="icon-btn" aria-label="Koszyk" id="btnCart">
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M3 6h2l3.6 9.59A2 2 0 0 0 10.5 17h6.9a2 2 0 0 0 1.9-1.37L22 8H6" stroke="#d1d5db" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          <span class="badge" id="cartCount">0</span>
+        </button>
+      </div>
     </header>
 
     <h1>Złóż zamówienie</h1>
-    <div class="tagline">Taxi, posiłek, a może nocleg?</div>
+    <div class="subtitle">Taxi, posiłek, a może nocleg?</div>
 
-    <section class="hero">
-      <!-- UWAGA: nazwa pliku jest czuła na wielkość liter -->
-      <img src="./Freeflow-logo.png" alt="FreeFlow logo" />
-      <button id="micBtn" class="cta" aria-label="Mów">
-        <span>🎤</span> <span>Dotknij logo i mów…</span>
-      </button>
+    <section class="hero" id="hero">
+      <div class="logo-mic"></div>
+      <!-- Niewidoczny przycisk – zapewnia gest użytkownika dla audio -->
+      <button id="micBtn" aria-label="Mów do FreeFlow"></button>
+      <div class="speak-cta" id="cta">
+        <div class="led" id="led"></div>
+        <div>Dotknij logo i mów…</div>
+      </div>
     </section>
 
-    <div class="bubble">
-      <span id="stateDot" class="dot" aria-hidden="true"></span>
-      <div id="transcript">Transkrypcja pojawi się tutaj…</div>
-    </div>
+    <div class="pill" id="transcript"><span style="opacity:.7">Transkrypcja pojawi się tutaj…</span></div>
 
-    <div class="actions">
-      <div class="chip chip--brand">🍽️ Jedzenie</div>
-      <div class="chip">🚕 Taxi</div>
-      <div class="chip">🏨 Hotel</div>
+    <div class="quick">
+      <button id="q-food">🍽️ Jedzenie</button>
+      <button id="q-taxi">🚕 Taxi</button>
+      <button id="q-hotel">🏠 Hotel</button>
     </div>
   </div>
 
+  <!-- odtwarzacz TTS -->
   <audio id="ttsPlayer" preload="auto"></audio>
 
   <script>
+    // === KONFIG ===
     const API_URL = 'https://freeflow-backend-vercel.vercel.app/api/assistant-text';
 
     const micBtn = document.getElementById('micBtn');
+    const hero   = document.getElementById('hero');
+    const led    = document.getElementById('led');
     const transcriptBox = document.getElementById('transcript');
-    const stateDot = document.getElementById('stateDot');
     const player = document.getElementById('ttsPlayer');
 
-    function setState(s){
-      const map = { idle:'#2ecc71', listen:'#f1c40f', think:'#3498db', err:'#e74c3c' };
-      stateDot.style.background = map[s] || map.idle;
-      micBtn.classList.toggle('pulse', s==='listen');
+    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+    let rec = null;
+
+    function uiListening(on){
+      led.classList.toggle('on', on);
+      hero.classList.toggle('listening', on);
+      document.getElementById('cta').firstElementChild?.classList.toggle('on', on);
     }
-    function show(t){ transcriptBox.textContent = t }
+    function show(text){
+      transcriptBox.textContent = text;
+    }
 
     async function playBase64Mp3(b64){
-      try{ player.src = `data:audio/mpeg;base64,${b64}`; await player.play(); return true; }
-      catch(e){ return false; }
+      try{
+        player.src = `data:audio/mpeg;base64,${b64}`;
+        await player.play();
+        return true;
+      }catch(e){
+        return false;
+      }
     }
     function speakFallback(text){
-      try{ const u=new SpeechSynthesisUtterance(text); u.lang='pl-PL'; speechSynthesis.cancel(); speechSynthesis.speak(u); }catch{}
+      try{
+        const u = new SpeechSynthesisUtterance(text);
+        u.lang = 'pl-PL';
+        speechSynthesis.cancel();
+        speechSynthesis.speak(u);
+      }catch{}
     }
 
-    async function sendToAssistant(text){
+    async function sendToAssistant(userText){
       try{
-        setState('think');
-        const r = await fetch(API_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({text})});
-        const data = await r.json();
-        if(!data.success){ setState('err'); show('Błąd serwera'); speakFallback('Wystąpił błąd serwera.'); return; }
-        const answer = data.assistantText || 'OK';
+        const res = await fetch(API_URL, {
+          method:'POST',
+          headers:{'Content-Type':'application/json'},
+          body: JSON.stringify({ text:userText })
+        });
+        const data = await res.json();
+
+        const answer = data?.assistantText || 'OK.';
         show(answer);
-        if (data.audioBase64){
+
+        if(data?.audioBase64){
           const ok = await playBase64Mp3(data.audioBase64);
           if(!ok) speakFallback(answer);
-        } else { speakFallback(answer); }
-        setState('idle');
-      }catch(e){ setState('err'); show('Problem z połączeniem'); speakFallback('Nie udało się połączyć z serwerem.'); }
+        }else{
+          speakFallback(answer);
+        }
+      }catch(err){
+        show('Błąd połączenia z serwerem.');
+        speakFallback('Błąd połączenia z serwerem.');
+      }
     }
 
     function startASR(){
-      const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
-      if(!SR){ alert('Twoja przeglądarka nie wspiera rozpoznawania mowy (spróbuj Chrome)'); return; }
-      const rec = new SR();
-      rec.lang = 'pl-PL'; rec.interimResults = true; rec.maxAlternatives = 1;
-      rec.onstart = ()=>{ setState('listen'); show('Słucham…') };
-      rec.onerror = ()=>{ setState('err'); show('Błąd rozpoznawania') };
+      if(!SR){
+        show('Twoja przeglądarka nie wspiera rozpoznawania mowy. Spróbuj Chrome.');
+        return;
+      }
+      if(rec){ try{ rec.abort(); }catch{} }
+      rec = new SR();
+      rec.lang = 'pl-PL';
+      rec.interimResults = true;
+      rec.maxAlternatives = 1;
+
+      rec.onstart = ()=>{ uiListening(true); show('Słucham…'); };
       rec.onresult = (e)=>{
-        let final='', inter='';
+        let final = '';
         for(let i=e.resultIndex;i<e.results.length;i++){
-          const t=e.results[i][0].transcript;
-          e.results[i].isFinal ? final+=t+' ' : inter+=t;
+          const txt = e.results[i][0].transcript;
+          if(e.results[i].isFinal){ final += txt; } else { show(txt); }
         }
-        show((final||inter).trim());
+        if(final.trim()) sendToAssistant(final.trim());
       };
-      rec.onend = ()=>{
-        const txt = transcriptBox.textContent.trim();
-        if (txt) sendToAssistant(txt); else setState('idle');
-      };
+      rec.onerror = (e)=>{ show('Błąd rozpoznawania: '+(e.error||'nieznany')); uiListening(false); };
+      rec.onend = ()=>{ uiListening(false); };
+
       rec.start();
     }
 
+    // gest użytkownika = pozwolenie na audio
     micBtn.addEventListener('click', ()=>{
       try{ speechSynthesis.cancel(); player.pause(); }catch{}
       startASR();
     });
 
-    setState('idle');
+    // szybkie podpowiedzi
+    document.getElementById('q-food').onclick  = ()=> sendToAssistant('Zamów jedzenie, pizza margherita dla jednej osoby.');
+    document.getElementById('q-taxi').onclick  = ()=> sendToAssistant('Zamów taxi spod obecnej lokalizacji do centrum.');
+    document.getElementById('q-hotel').onclick = ()=> sendToAssistant('Znajdź hotel w okolicy na jedną noc, budżet 250 zł.');
   </script>
 </body>
 </html>
